# renderer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mesh.h  model.h  obj_import.cpp  obj_import.hpp  render  scene.cpp  scene.h  scene.hpp  triangle.h  vector.h  window.cpp  window.h
